# poa

./: .gitignore  app.spec  environment.yml  example.sql  mypy.ini  pyproject.toml  setup.sql
assets/: config.template.json
scripts/: build-exe.cmd  example-check-using-compare-script.cmd  example-cleanup-script.cmd  example-full-refresh-using-script.cmd  example-incremental-refresh-exe.cmd  example-incremental-refresh-using-compare-script.cmd  example-incremental-refresh-using-increasing-script.cmd  example-inspect-script.cmd
src/: cli.py  main.py
src/adapter/: __init__.py  config.py  fs.py  inspect_table.py
src/adapter/cache/: __init__.py  pg.py  strategy.py
src/adapter/cursor/: odbc.py  pg.py  shared.py
src/adapter/cursor_provider/: __init__.py  odbc.py  pg.py  strategy.py
src/adapter/ds/: shared.py
src/adapter/ds/dst_ds/: __init__.py  pg.py  strategy.py
src/adapter/ds/src_ds/: __init__.py  hh.py  ms.py  odbc.py  pg.py  strategy.py
src/adapter/dst/: pg.py
src/adapter/dst_ds/: __init__.py  pg.py  strategy.py
src/adapter/log/: __init__.py  pg.py  strategy.py
src/adapter/src/: hh.py
src/adapter/src_ds/: __init__.py  hh.py  ms.py  odbc.py  pg.py  strategy.py
src/data/: __init__.py  api.py  batch_id.py  cache.py  check_result.py  column.py  compare_rows.py  config.py  connection_provider.py  cursor.py  cursor_provider.py  data_type.py  db_config.py  dst_ds.py  error.py  frozen_dict.py  log.py  row.py  row_diff.py  row_key.py  src_ds.py  sync_result.py  sync_table_spec.py  table.py
src/service/: __init__.py  check.py  cleanup.py  inspect.py  sync.py
test/: conftest.py  test-config.template.json  test-data.sql
test/adapter/cache/: test_pg.py
test/adapter/dst_ds/: test_pg.py
test/adapter/log/: test_pg.py
test/adapter/src_ds/: test_hh.py
test/service/: test_sync.py
