[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poa"
dynamic = ["version"]
description = 'sync data between relational databases'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Mark Stefanovic" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "keyring",
  "loguru",
  "mypy",
  "pip-audit",
  "pydantic",
  "pytest",
  "pyodbc",
  "pyinstaller",
  "psycopg[binary]",
  "ruff",
  "ruff-lsp",
]

[project.urls]
Documentation = "https://github.com/unknown/poa#readme"
Issues = "https://github.com/unknown/poa/issues"
Source = "https://github.com/unknown/poa"

[tool.hatch.version]
path = "src/poa/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/poa tests}"

[tool.coverage.run]
source_pkgs = ["poa", "tests"]
branch = true
parallel = true
omit = [
  "src/poa/__about__.py",
]

[tool.coverage.paths]
poa = ["src/poa", "*/poa/src/poa"]
tests = ["tests", "*/poa/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
sqlite_cache = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
no_implicit_reexport = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
src = ["src"]
line-length = 100
ignore = ["F401", "F403"]
